feat: Criando mod do go

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Build Golang Binary
         run: |
-          cd src && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -v -a -o main main.go && zip lambda_code.zip main
+          cd src/main && go get && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build && zip ../../lambda_code.zip main
       - name: s3 Lambda Artifact Creation
         run: |
           aws s3 cp ./lambda_code.zip s3://aws-lambda-artifact-function-use1-dev/artifacts/lambda/${{ github.event.repository.name }}/
