--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -24,5 +24,5 @@ jobs:
         uses: appleboy/lambda-action@v0.1.9
         with:
           s3_bucket: aws-s3-lambda-artifacts-use1-dev-dkkpwua
-          s3_key: artifacts/lambda/${{ github.event.repository.name }}/
+          s3_key: artifacts/lambda/${{ github.event.repository.name }}/lambda_code.zip
           function_name: ${{ github.event.repository.name }}
