--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: TypeScript Lambda CI
 on:
   pull_request:
     paths:
-      - "**/*.ts"
+      - '**/*.ts'
 jobs:
   typescript-lambda-ci:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
-        run:  npm ci
+        run: npm install
       - name: Build TypeScript
         run: npm run build
       - name: Zip the build
