--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "babel src --out-dir dist --extensions '.ts'"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.470.0",
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
     "@babel/node": "^7.22.19",
@@ -15,11 +16,9 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-typescript": "^7.23.3",
     "@types/aws-lambda": "^8.10.130",
-    "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^9.0.7",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1515.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "bcryptjs": "^2.4.3",
