--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.470.0",
+    "@aws-sdk/lib-dynamodb": "^3.470.0",
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
     "@babel/node": "^7.22.19",
